<resources>
    <string name="app_name">VietMy Dental</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_call_phone_neverask">Bạn đã cấm app sử dụng chức năng gọi điện thoại. Vui lòng vào setting để bật lại để sử dụng!</string>
    <string name="permission_camera_neverask">Bạn đã cấm app sử dụng chức năng camera. Vui lòng vào setting để bật lại để sử dụng!</string>
    <string name="permission_denied">Bạn đã cấm quyền truy cập. Vui lòng cho phép ứng dụng quyền này để tiếp tục sử dụng!</string>
    <string name="CONTENT00001">Harpy Framework</string>
    <string name="CONTENT00002">Chưa chọn khách hàng!</string>
    <string name="CONTENT00003">Chưa chọn nguyên nhân!</string>
    <string name="CONTENT00004">Chưa nhập tiêu đề!</string>
    <string name="CONTENT00005">Chưa nhập nội dung!</string>
    <string name="CONTENT00006">Bạn chỉ được thêm tối đa %1$d hình!</string>
    <string name="CONTENT00007">Vui lòng kiểm tra lại dữ liệu!</string>
    <string name="CONTENT00008">OK</string>
    <string name="CONTENT00009">Cancel</string>
    <string name="CONTENT00010">Bạn chắc chắn muốn close Issue?</string>
    <string name="CONTENT00011">Bạn chắc chắn muốn Reopen Issue?</string>
    <string name="CONTENT00012">Mã số:</string>
    <string name="CONTENT00013">Khách hàng:</string>
    <string name="CONTENT00014">NV kinh doanh:</string>
    <string name="CONTENT00015">Địa chỉ:</string>
    <string name="CONTENT00016">Tiêu đề:</string>
    <string name="CONTENT00017">Người tạo:</string>
    <string name="CONTENT00018">Ngày tạo:</string>
    <string name="CONTENT00019">Trạng thái:</string>
    <string name="CONTENT00020">Nguyên nhân:</string>
    <string name="CONTENT00021">Điện thoại:</string>
    <string name="CONTENT00022">Người liên hệ:</string>
    <string name="CONTENT00023">Tài khoản và mật khẩu không được trống!</string>
    <string name="CONTENT00024">(%1$s)</string>
    <string name="CONTENT00025">Bạn vui lòng điền đầy đủ thông tin!</string>
    <string name="CONTENT00026">Mật khẩu nhập lại không chính xác!</string>
    <string name="CONTENT00027">Chưa chọn NV bảo trì!</string>
    <string name="CONTENT00028">Chưa chọn loại sự cố!</string>
    <string name="CONTENT00029">Chưa nhập người liên hệ!</string>
    <string name="CONTENT00030">Chưa nhập số điện thoại!</string>
    <string name="CONTENT00031">Nội dung: \n</string>
    <string name="CONTENT00032">Liên hệ:</string>
    <string name="CONTENT00033">Sự cố:</string>
    <string name="CONTENT00034">Mức độ:</string>
    <string name="CONTENT00035">Ngày bảo trì:</string>
    <string name="CONTENT00036">Lịch bảo trì:</string>
    <string name="CONTENT00037">Nhân viên bảo trì:</string>
    <string name="CONTENT00038">Điện thoại:</string>
    <string name="CONTENT00039">Báo cáo kết quả: \n</string>
    <string name="CONTENT00040">Bảo trì định kỳ</string>
    <string name="CONTENT00041">Yêu cầu bảo trì</string>
    <string name="CONTENT00042">Thời gian xử lý:</string>
    <string name="CONTENT00043">Chưa chọn trạng thái!</string>
    <string name="CONTENT00044">Gas Service</string>
    <string name="CONTENT00045">Nội dung:</string>
    <string name="CONTENT00046">Mất kết nối mạng, vui lòng thử lại!</string>
    <string name="CONTENT00047">Có lỗi xảy ra, vui lòng thử lại!</string>
    <string name="CONTENT00048">Có lỗi xảy ra</string>
    <string name="CONTENT00049">Tài khoản / Số điện thoại</string>
    <string name="CONTENT00050">Mật khẩu</string>
    <string name="CONTENT00051">Đăng nhập</string>
    <string name="CONTENT00052">Đăng ký</string>
    <string name="CONTENT00053">Welcome to gas app!</string>
    <string name="CONTENT00054">Số điện thoại</string>
    <string name="CONTENT00055">Họ và tên</string>
    <string name="CONTENT00056">Nhập lại mật khẩu</string>
    <string name="CONTENT00057">Số nhà</string>
    <string name="CONTENT00058">Tên đường</string>
    <string name="CONTENT00059">Title</string>
    <string name="CONTENT00060">Tìm kiếm KH, nhập tối thiểu 3 ký tự</string>
    <string name="CONTENT00061">Mã Khách Hàng</string>
    <string name="CONTENT00062">Tiêu đề</string>
    <string name="CONTENT00063">Nội dung</string>
    <string name="CONTENT00064">Thêm hình</string>
    <string name="CONTENT00065">Tạo mới</string>
    <string name="CONTENT00066">Xóa hình</string>
    <string name="CONTENT00067">Open</string>
    <string name="CONTENT00068">Close</string>
    <string name="CONTENT00069">Không có dữ liệu</string>
    <string name="CONTENT00070">Gửi trả lời</string>
    <string name="CONTENT00071">Lịch sử trả lời</string>
    <string name="CONTENT00072">Thông tin</string>
    <string name="CONTENT00073">Đóng lại</string>
    <string name="CONTENT00074">Mới</string>
    <string name="CONTENT00075">Đã xem</string>
    <string name="CONTENT00076">Người liên hệ</string>
    <string name="CONTENT00077">Bảo trì sự cố</string>
    <string name="CONTENT00078">Bảo trì định kỳ</string>
    <string name="CONTENT00079">Tên khách hàng</string>
    <string name="CONTENT00080">Báo sai sự cố</string>
    <string name="CONTENT00081">Ghi chú</string>
    <string name="CONTENT00082">Ghi chú nội bộ</string>
    <string name="CONTENT00083">Mật khẩu cũ</string>
    <string name="CONTENT00084">Mật khẩu mới</string>
    <string name="CONTENT00085">Xác nhận mật khẩu mới</string>
    <string name="CONTENT00086">Lưu</string>
    <string name="CONTENT00087">Họ Tên</string>
    <string name="CONTENT00088">Địa chỉ</string>
    <string name="CONTENT00089">&#160;&#160;&#160;&#160;&#160;&#160;Đổi mật khẩu&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="CONTENT00090">Thoát</string>
    <string name="CONTENT00091">Mã:</string>
    <string name="CONTENT00092">Trạng thái</string>
    <string name="CONTENT00093">Nguyên nhân</string>
    <string name="CONTENT00094">Nhân viên sale</string>
    <string name="CONTENT00095">Người tạo</string>
    <string name="CONTENT00096">Ngày tạo</string>
    <string name="CONTENT00097">Mở lại</string>
    <string name="CONTENT00098">Đánh giá dịch vụ</string>
    <string name="CONTENT00099">Danh sách Bảo trì</string>
    <string name="CONTENT00100">Tài khoản</string>
    <string name="CONTENT00101">Chưa chọn hình ảnh!</string>
    <string name="CONTENT00102">Hiện mật khẩu</string>
    <string name="CONTENT00103">Nội dung cần đánh giá &amp; góp ý</string>
    <string name="CONTENT00104">Khách hàng: %1$s</string>
    <string name="CONTENT00105">Ngày tạo: $1%s</string>
    <string name="CONTENT00106">%1$s ID:%2$s</string>
    <string name="CONTENT00107">%1$s - %2$s</string>
    <string name="CONTENT00108">Gas Service</string>
    <string name="CONTENT00109">Số serial bình</string>
    <string name="CONTENT00110">Loại định kỳ:</string>
    <string name="CONTENT00111">Loại khách hàng:</string>
    <string name="CONTENT00112">Vị trí:</string>
    <string name="CONTENT00113">Số serial bình:</string>
    <string name="CONTENT00114">Chưa cập nhật được vị trí hiện tại!</string>
    <string name="CONTENT00115">Thương hiệu khách hàng đã dùng</string>
    <string name="CONTENT00116">Tên dịch vụ đối thủ</string>
    <string name="CONTENT00117">Thông tin thêm:</string>
    <string name="CONTENT00118">Loại điểm:</string>
    <string name="CONTENT00119">Thời gian dự kiến hết gas:</string>
    <string name="CONTENT00120">Thương hiệu đối thủ:</string>
    <string name="CONTENT00121">Tên đối thủ:</string>
    <string name="CONTENT00122">Tạo Khách Hàng</string>
    <string name="CONTENT00123">Điện thoại liên hệ</string>
    <string name="CONTENT00124" formatted="false">Phiên bản %s \n Bạn đã cập nhật phiên bản mới nhất</string>
    <string name="CONTENT00125">Xem thêm</string>
    <string name="CONTENT00126">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Thoát&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="CONTENT00128">Cài đặt</string>
    <string name="CONTENT00134">Một mã xác thực đã được gửi đến số điện thoại của bạn dưới dạng tin nhắn, hãy nhập nó vào ô bên dưới</string>
    <string name="CONTENT00135">Mã xác thực</string>
    <string name="CONTENT00136">Để sau</string>
    <string name="CONTENT00140">vd: 0123456789-0908070605</string>
    <string name="CONTENT00141">Cập nhật tài khoản</string>
    <string name="CONTENT00142">Đã có phiên bản mới, vui lòng cập nhật!</string>
    <string name="CONTENT00154">Cập nhật khách hàng</string>
    <string name="CONTENT00162">Thông báo</string>
    <string name="CONTENT00163">Đầu tư</string>
    <string-array name="CONTENT00164">
        <item>Chọn loại GAS</item>
        <item>Quà khuyến mãi</item>
    </string-array>
    <string name="CONTENT00165">Bạn đang tắt GPS, vui lòng bật GPS khi sử dụng tính năng này!
    </string>
    <string name="CONTENT00166">Thiết bị đã cấm device truy xuất. Chức năng không thể hoạt động!\nBạn vui lòng vào setting -> permission và bật các quyền của ứng dụng để tiếp tục sử dụng.</string>
    <string name="CONTENT00167">Bật</string>
    <string name="CONTENT00168">Gửi báo cáo công việc</string>
    <string name="CONTENT00169">Xác nhận vị trí</string>
    <string name="CONTENT00170">Số điện thoại người nhận</string>
    <string name="CONTENT00171">Số điện thoại người đặt</string>
    <string name="CONTENT00172">Mua hàng ngay</string>
    <string name="CONTENT00173">Vị trí hiện tại</string>
    <string name="CONTENT00174">Vị trí đã chọn</string>
    <string name="CONTENT00175"><![CDATA[Không tìm thấy đại lý quanh vị trí hiện tại? </br> Bạn có muốn tìm với khoảng cách rông hơn không?]]></string>
    <string name="CONTENT00176">Không tìm thấy đại lý quanh vị trí hiện tại!</string>
    <string name="CONTENT00179">Địa chỉ email</string>
    <string name="CONTENT00192">Công ty cổ phần Dầu Khí Miền Nam</string>
    <string name="CONTENT00193">spj.daukhimiennam.com</string>
    <string name="CONTENT00211">Liên hệ ngay</string>
    <string name="CONTENT00212">Mua hàng</string>
    <string name="CONTENT00213" formatted="false">Cảm ơn quý khách đã tin dùng \ndịch vụ của chúng tôi!\n Nhân viên của chúng tôi tại \n %s \nsẽ liên lạc với quý khách qua số điện thoại\n %s \ntrong thời gian sớm nhất!</string>
    <string name="CONTENT00214">Gas</string>
    <string name="CONTENT00215">VIP</string>
    <string name="CONTENT00216">Phụ Kiện</string>
    <string name="CONTENT00217">Xác nhận</string>
    <string name="CONTENT00218">Tổng cộng:</string>
    <string name="CONTENT00575">Tỉnh/Thành Phố</string>
    <string name="CONTENT00576">Phường/Xã</string>
    <string name="CONTENT00577">Tên người dùng</string>
    <string name="CONTENT00578">Cập nhật</string>
    <string name="CONTENT00579">Quận/Huyện</string>
    <string name="CONTENT00586">Tìm kiếm</string>
    <string name="CONTENT00587">Tất cả chi nhánh</string>
    <string name="CONTENT00591">Hôm nay</string>
    <string name="CONTENT00592">Hôm qua</string>
    <string name="CONTENT00593">Tháng này</string>
    <string name="CONTENT00594">Tháng trước</string>
    <string name="CONTENT00600">Dành cho bệnh nhân</string>
    <string name="gas_booking_0033">Hủy</string>
    <string name="gas_du_0003">Từ ngày</string>
    <string name="gas_du_0004">Đến ngày</string>
    <string name="gas_du_0007">Lưu</string>
    <string name="gas_du_0008">Hủy</string>
</resources>