<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view_choose_branch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/corner_border_view"
        android:clickable="true">
        <TextView
            android:id="@+id/tv_branch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/CONTENT00587"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/next"/>/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/view_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/corner_border_view"
            android:clickable="true"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_fromdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gas_du_0003"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_schedule_large"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/corner_border_view"
            android:clickable="true"
            android:layout_weight="1"
            android:layout_marginLeft="20dp">
            <TextView
                android:id="@+id/tv_todate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gas_du_0004"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_schedule_large"/>/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnToday"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/corner_button_30"
        android:text="@string/CONTENT00591"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <Button
        android:id="@+id/btnYesterday"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/corner_button_30"
        android:text="@string/CONTENT00592"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <Button
        android:id="@+id/btncurrenMonth"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/corner_button_30"
        android:text="@string/CONTENT00593"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>
    <Button
        android:id="@+id/btnLastMonth"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/corner_button_30"
        android:text="@string/CONTENT00594"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:id="@+id/btnSearch"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/corner_button"
        android:text="@string/CONTENT00586"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>


</LinearLayout>