<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/corner_dialog"
    android:padding="5dp">
    <TextView
        android:layout_marginTop="@dimen/layout_button_height_small"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CONTENT00578"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/tv_name_update"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:textSize="@dimen/text_size_14"/>
    <EditText
        android:id="@+id/edt_update"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorMain"
            android:text="@string/gas_booking_0033"
            android:textSize="20sp"
            android:background="@android:color/white"
            />
        <Button
            android:id="@+id/btn_Ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/colorMain"
            android:text="@string/CONTENT00008"
            android:textSize="20sp"
            android:background="@android:color/white"
            />
    </LinearLayout>

</LinearLayout>