<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/text_size_10">

            <android.support.design.widget.TextInputLayout style="@style/text_layout_style">

                <EditText
                    android:id="@+id/user_change_pass_old"
                    style="@style/text_inner_layout_style"
                    android:layout_marginTop="@dimen/layout_margin_horizontal"
                    android:hint="@string/CONTENT00083"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/text_layout_style">

                <EditText
                    android:id="@+id/user_change_pass_new"
                    style="@style/text_inner_layout_style"
                    android:layout_marginTop="@dimen/layout_margin_horizontal"
                    android:hint="@string/CONTENT00084"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout style="@style/text_layout_style">

                <EditText
                    android:id="@+id/user_change_pass_new_confirm"
                    style="@style/text_inner_layout_style"
                    android:layout_marginTop="@dimen/layout_margin_horizontal"
                    android:hint="@string/CONTENT00085"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_margin="@dimen/text_size_10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:text="@string/CONTENT00086"
                android:background="@color/colorMain"
                android:textColor="@android:color/white"
                />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_margin="@dimen/text_size_10"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:text="@string/gas_booking_0033"
                android:background="@color/v2_dark"
                android:textColor="@android:color/white"
                />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>